--- a/QuasiSpecFileEditor/Web.config
+++ b/QuasiSpecFileEditor/Web.config
@@ -4,11 +4,26 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+        <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </configSections>
+  <connectionStrings>
+    <!--<add name="SchoolContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=ContosoUniversity1;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />-->
+    <add name="SpecFileDataContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=QuasiSpecFileDB;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="OUTPUT_DIR_PATH" value="C:\Users\7326678\Desktop\TestFolder\" />
+
+    <add key="ADDomainName" value="HGSTGLOBAL" />
+    <add key="ADServer" value="hitachigst.global" />
+    <add key="ADSharedDomainName" value="AD.SHARED" />
+    <add key="ADShared" value="AD.SHARED" />
+    
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
@@ -52,4 +67,9 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
